<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fruity Nexus</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="exit_button">Exit</string>
    <string name="back_button">Back</string>
    <string name="high_score_text">High Score: %d</string>
    <string name="moves_text">Moves: %d</string>
    <string name="score_text">Score: %d</string>
    <string name="vibration_setting">Vibration</string>
    <string name="language_setting">Language</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>
</resources>